Bug 1507661 - Don't treat an explicit hyphen as though it could be a soft-hyphenation position. r=jwatt