gfx/thebes/gfxTextRun.h
@@ -178,6 +178,7 @@ class gfxTextRun : public gfxShapedText {
                                       const uint8_t* aBreakBefore);
 
   enum class HyphenType : uint8_t {
+    // Code in BreakAndMeasureText depends on the ordering of these values!
     None,
     Explicit,
     Soft,
